--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@
     </div>
 
     <script>
+      const API_URL = "https://json-parser-cv0f.onrender.com";
       async function parseInput() {
         const input = document.getElementById("jsonInput").value;
         const errorMsg = document.getElementById("errorMessage");
@@ -313,7 +314,7 @@
         spinner.style.display = "block";
 
         try {
-          const response = await fetch("/parse", {
+          const response = await fetch(`${API_URL}/parse`, {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ json: input }),
@@ -370,7 +371,7 @@
         spinner.style.display = "block";
 
         try {
-          const response = await fetch("/format", {
+          const response = await fetch(`${API_URL}/format`, {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ json: input }),
