fix: Update index.html

--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
             placeholder="Enter your JSON here..."
             spellcheck="false"
           >
+// Click Format. Alignment issue intended🫡
 {
             "name": "John",
             "age": 30,
