fix: minor changes

--- a/index.html
+++ b/index.html
@@ -266,18 +266,18 @@
           </div>
           <div id="errorMessage" class="status-message error-message"></div>
           <div id="successMessage" class="status-message success-message"></div>
+          <!-- Click Format. Alignment issue intended🫡 -->
           <textarea
             id="jsonInput"
             placeholder="Enter your JSON here..."
             spellcheck="false"
           >
-// Click Format. Alignment issue intended🫡
-{
-            "name": "John",
-            "age": 30,
-            "city": "New York"
-        }</textarea
-          >
+          {
+              "name": "John",
+              "age": 30,
+              "city": "New York"
+          }
+          </textarea>
         </div>
 
         <div class="editor-section">
